既読機能のフロント側実装

--- a/app/assets/stylesheets/posts.css
+++ b/app/assets/stylesheets/posts.css
@@ -7,3 +7,11 @@
 .post-date{
   color: gray;
 }
+
+div[data-check="true"] {
+  background: #585555;
+}
+
+div[data-check="true"] {
+  background: #585555;
+}
